# reflex

./: .gitignore  .gitmodules  Makefile  README.md  SETUP.md  STRUCTURE.md  TODO.md  notes.txt  pyproject.toml  quick_train.sh  run.sh  run_stress.sh  setup.sh  stressor.sh  tester.c  tester_cpu.c  tester_mem.c  tps.txt  train.sh
..venv/: pyvenv.cfg
benchmarks/: bake_unixbench_image.ps1  bake_unixbench_image.sh  bench_compare.py  parse_benchmark_scores.py  report_run.py  run_controller_matrix.py  run_profile.sh  sample_host_metrics.py  scorecard.py  scorecard_compact.py  scorecard_matrix.py  scorecard_three_way.py  scorecard_trials_aggregate.py  sysbench_compare.sh  sysbench_qemu.sh  unixbench_compare.sh  unixbench_qemu.ps1  unixbench_qemu.sh  unixbench_qemu_windows.ps1
configs/: features_schema.yaml  profiles.yaml  reward_weights.yaml  tuner_catalog.yaml  tuning_policy.yaml
daemon/: action_log.py  applied_stack.py  baseline.py  decision_engine.py  history.py  host_metrics.py  main.py  reward.py  rollback.py
daemon_core/: __init__.py  config.py  runtime.py  types.py
docs/: metrics_catalog.md  tuning_decision_schema.md
ebpf/: collector.bpf.c  mvp_ringbuf.bpf.c
implementations/: README.md  main.py
info/: list.txt
models/: experiments.jsonl  gp_mem.pkl  gp_tester_mem_756b96.pkl  gp_tester_mem_cde27b.pkl  library.json
scripts/: export_dataset.py  kmeans.py  quick_train.sh  run.sh  run_classifier.sh  run_dev_loop_qemu.sh  run_in_qemu.ps1  run_in_qemu.sh  run_stress.sh  setup.ps1  setup.sh  setup_dev_env.sh  setup_windows.ps1  stressor.sh  test_mvp_qemu.sh  (+4 more)
(+113 files in other folders)
