[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"

[project]
name = "reflex"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.4",
    "pyyaml>=6.0",
    "ruff>=0.15.12",
    "scikit-optimize>=0.10.2",
    "scipy>=1.17.1",
]

[project.optional-dependencies]
ml = ["torch"]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
exclude = [
    "external/"
]
